<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearClienteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/activity_titulo_crear_cliente"
                    android:textColor="@color/colorTitulos"
                    android:textSize="32sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/TxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@xml/input"
                android:ems="10"
                android:enabled="false"
                android:hint="Nombre"
                android:inputType="text"
                android:padding="10dp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/Txtncabana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@xml/input"
                android:ems="10"
                android:enabled="false"
                android:hint="Apellido"
                android:inputType="text"
                android:padding="10dp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/txtNumeroDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="10dp"
                android:background="@xml/input"
                android:ems="10"
                android:enabled="false"
                android:hint="Cedula"
                android:inputType="number"
                android:padding="10dp" />

            <EditText
                android:id="@+id/txtTipoCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@xml/input"
                android:ems="10"
                android:enabled="false"
                android:hint="Temperatura"
                android:inputType="number"
                android:padding="10dp"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnConsultarClientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@xml/button"
            android:text="@string/activity_consultar_clientes"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnModificarClientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@xml/button"
            android:text="@string/activity_modificar_clientes"
            android:textColor="#fff" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>